# hackathon-navigator-agent

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  tasks.py
backend/app/agents/: supervisor.py
backend/app/api/: analysis.py  evaluation.py  github.py  health.py  pitches.py  projects.py  routes.py  tasks.py
backend/app/core/: auth.py  config.py
backend/app/repositories/: agent_repository.py  benchmark_repository.py  evaluation_repository.py
backend/app/services/: agent_service.py  benchmark_service.py  evaluation_service.py  github_service.py  rag_service.py
backend/db/: models.py
backend/workers/: tasks.py
frontend/: .dockerignore  .env.local.example  .eslintrc.json  .gitignore  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/hooks/: useApi.ts
frontend/src/app/lib/: api.ts
frontend/src/app/providers/: providers.tsx
