[tool.poetry]
name = "hackathon-navigator-backend"
version = "0.1.0"
description = "Hackathon Navigator Agent Backend"
authors = ["Your Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.5"}
celery = "^5.4.0"
anthropic = "^0.28.0"
openai = "^1.35.0"
langgraph = "^0.1.14"
langchain = "^0.2.5"
langchain-anthropic = "^0.1.15"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.5"
qdrant-client = "^1.9.1"
httpx = "^0.27.0"
pygithub = "^2.3.0"
gitpython = "^3.1.43"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
structlog = "^24.2.0"
tenacity = "^8.3.0"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
